# Fly-in

./: .gitignore  Makefile  README.md  __main__.py  assets.py  builder.py  color_map_generator.py  drone.py  fly-in.py  formatting.py  link.py  parser.py  pyproject.toml  zone.py
font/: license.txt  readme.txt
testmaps/: bad_capacity.txt  bad_color.txt  bad_connection.txt  bad_max_drones.txt  bad_meta1.txt  bad_meta2.txt  basic.txt  blocked.txt  blocked_end.txt  capacity.txt  colors.txt  connections_first.txt  disconnected.txt  drones_not_first.txt  dup_connection.txt  dup_drones.txt  dup_end.txt  dup_hub.txt  dup_meta.txt  dup_start.txt  empty_meta1.txt  empty_meta2.txt  no_drones.txt  no_end.txt  no_start.txt  priority.txt  restricted.txt  zero_drones.txt
