[project]
name = "fly-in"
version = "0.1.0"
description = "Drones are interesting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lark>=1.3.1",
    "pygame>=2.6.1",
    "webcolors>=25.10.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.1",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
